# fm3-gfa

./: .gitignore  Cargo.toml  README.md  build.rs
ogdf/basic/: Constraint.cpp  GraphAttributes.cpp  GraphAttributes.h  geometry.cpp
ogdf/cluster/: ClusterGraphAttributes.cpp
ogdf/energybased/: FMMMLayout.cpp  FMMMLayout.h
ogdf/fileformats/: GmlParser.cpp  GmlParser.h
src/: bfs.rs  cli.rs  echart.rs  generate.rs  gfa.rs  gml.rs  grammar.pest  layout.rs  lib.rs  main.rs  serve.rs  vcf.rs  wrapper.cpp  wrapper.h
static/: index.html
tests/: test.gml
vis/: index.html
