[package]
name = "fm3-gfa"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
# nalgebra = "0.33.2"
# num-complex = "0.4.6"
pest = "2.7.15"
pest_derive = "2.7.15"
petgraph = "0.7.1"
# rust-sugiyama = "0.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
# thiserror = "2.0.11"

[build-dependencies]
bindgen = "0.69.1"
cc = "1.0"
walkdir = "2.4.0"

# 添加这个配置来设置 OUT_DIR
[workspace]
members = ["."]

# rust-analyzer 的构建配置
[package.metadata.rust-analyzer.cargo.buildScripts]
enable = true

[package.metadata.rust-analyzer]
rustc_private = true
