[package]
name = "fm3-gfa"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
gfa = "0.10.1"
indicatif = "0.17.9"
nom = "7.1.3"
noodles = { version = "0.88.0", features = ["vcf"] }
pest = "2.7.15"
pest_derive = "2.7.15"
petgraph = "0.7.1"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

[build-dependencies]
bindgen = "0.69.1"
cc = "1.0"
walkdir = "2.4.0"

[workspace]
members = ["."]

[package.metadata.rust-analyzer.cargo.buildScripts]
enable = true

[package.metadata.rust-analyzer]
rustc_private = true
